<resources>
    <string name="app_name">MyAppsPortfolio</string>
    <string name="action_settings">Settings</string>
    <string name="main_heading">My Nanodegree Apps!</string>
    <string name="spotify_button">Spotify Streamer</string>
    <string name="scores_button">Scores App</string>
    <string name="library_button">Library App</string>
    <string name="build_it_bigger_button">Build It Bigger</string>
    <string name="xyz_reader_button">XYZ Reader</string>
    <string name="capstone_button">Capstone: My Own App</string>
</resources>
