<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context="com.example.android.myappsportfolio.MainActivity"
    tools:showIn="@layout/activity_main"
    android:background="#212121">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/main_heading"
        android:id="@+id/textView"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="15dp"
        android:textColor="#ffffff" />

    <ScrollView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_below="@+id/textView"
        android:layout_marginTop="30dp" >

        <RelativeLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" >

            <Button
                android:layout_width="250dp"
                android:layout_height="wrap_content"
                android:text="@string/spotify_button"
                android:id="@+id/button"
                android:layout_centerHorizontal="true"
                android:textColor="#ffffff"
                android:background="#F44336"
                android:onClick="showToast" />

            <Button
                android:layout_width="250dp"
                android:layout_height="wrap_content"
                android:text="@string/scores_button"
                android:id="@+id/button2"
                android:layout_marginTop="10dp"
                android:layout_below="@+id/button"
                android:layout_centerHorizontal="true"
                android:background="#F44336"
                android:textColor="#ffffff"
                android:onClick="showToast" />

            <Button
                android:layout_width="250dp"
                android:layout_height="wrap_content"
                android:text="@string/library_button"
                android:id="@+id/button3"
                android:layout_below="@+id/button2"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="10dp"
                android:background="#F44336"
                android:textColor="#ffffff"
                android:onClick="showToast" />

            <Button
                android:layout_width="250dp"
                android:layout_height="wrap_content"
                android:text="@string/build_it_bigger_button"
                android:id="@+id/button4"
                android:layout_below="@+id/button3"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="10dp"
                android:background="#F44336"
                android:textColor="#ffffff"
                android:onClick="showToast" />

            <Button
                android:layout_width="250dp"
                android:layout_height="wrap_content"
                android:text="@string/xyz_reader_button"
                android:id="@+id/button5"
                android:layout_below="@+id/button4"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="10dp"
                android:background="#F44336"
                android:textColor="#ffffff"
                android:onClick="showToast" />

            <Button
                android:layout_width="250dp"
                android:layout_height="wrap_content"
                android:text="@string/capstone_button"
                android:id="@+id/button6"
                android:layout_below="@+id/button5"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="10dp"
                android:background="#3F51B5"
                android:textColor="#ffffff"
                android:onClick="showToast" />

        </RelativeLayout>
    </ScrollView>
</RelativeLayout>
